--- a/src/app/Components/navmenu/navmenu.component.html
+++ b/src/app/Components/navmenu/navmenu.component.html
@@ -1,11 +1,18 @@
-<nav class="navbar navbar-expand-md py-1 navbar-light bg-light sticky-top  shadow-sm p-3   rounded
+<nav class="navbar  navbar-expand-md py-1 navbar-light bg-light sticky-top  shadow-sm p-3   rounded
 " >
+
     <div class="container-fluid">
-      <div class="d-flex justify-content-center">
+      
         <a href="#" class="navbar-brand">Logo</a>
-      </div>
+      
     
-     
+      <div class="input-group input-group-sm  navbar-center">
+        <div class="input-group-prepend" >
+          <span class="input-group-text" id="inputGroup-sizing-sm" style="border-right: none; border-radius: 2px; height: 30px;"><i class='bx bx-search' ></i></span>
+        </div>
+        <input type="text" class="form-control bg-light" aria-label="Small" placeholder="Search..." aria-describedby="inputGroup-sizing-sm" style="text-align: center; position: relative; border-left: none; height: 30px;">
+      </div>
+      
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" >
         <span class="navbar-toggler-icon" style="height: 18px; width: 18px;"></span>
       </button>
@@ -29,11 +36,12 @@
               <li>
                 <hr class="dropdown-divider" style="color: rgb(97, 97, 97);">
               </li>
-              <li><a class="dropdown-item" href="#" style="color: rgb(168, 59, 59);"><i class='bx bx-log-out' ></i> Logout </a></li>
+              <li><a class="dropdown-item" href="#" style="color: rgb(97, 97, 97);"><i class='bx bx-log-out' ></i> Logout </a></li>
             </ul>
           </li>
         </ul>
       </div>
     </div>
+    
   </nav>
   
