--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-navmenu></app-navmenu>
+<!-- <app-navmenu></app-navmenu>
 <div class="index" style="position: relative;">
 
 <div class="content container-fluid">
@@ -13,9 +13,10 @@
   </div>
   
 </div>
-</div>
+</div> -->
 
-
+<app-navmenu></app-navmenu>
+<app-error-page></app-error-page>
 
 
 
