--- a/src/app/Components/navmenu/navmenu.component.html
+++ b/src/app/Components/navmenu/navmenu.component.html
@@ -1,9 +1,10 @@
-<nav class="navbar  navbar-expand-md py-1 navbar-light bg-light sticky-top  shadow-sm p-3   rounded
+<div class="navbar-blur"></div>
+<nav class="navbar  navbar-expand-md py-1 navbar-light bg-light sticky-top  shadow-sm p-3 
 " >
 
     <div class="container-fluid">
       
-        <a href="#" class="navbar-brand">Logo</a>
+        <a href="#" class="navbar-brand"><img src="assets/images/nav-logo.png" width="35px" alt=""></a>
       
     
       <div class="input-group input-group-sm  navbar-center">
@@ -42,6 +43,5 @@
         </ul>
       </div>
     </div>
-    
+
   </nav>
-  
