--- a/src/app/Components/sidemenu/sidemenu.component.html
+++ b/src/app/Components/sidemenu/sidemenu.component.html
@@ -1,7 +1,137 @@
-
-<body >
+<body>
     <div class="sidebar">
-        
+        <div class="profile">
+            <img src="/assets/images/burak.jpg" alt="">
+            <h3>Burak Arslan</h3>
+            <p>Developer</p>
+        </div>
+        <div class="menu_items">
+            <ul class="menu_ul">
+                <li class="menu_li " >
+                   
+                     
+                    <span class="item " style="color:#cfcfcf"> General </span>
+                 
+                
+            </li>
+            
+                <li class="menu_li">
+                    <a href="#" >
+                        <span class="icon"><i class='bx bxs-grid-alt' ></i></span>
+                        <span class="item">Dashoard</span>
+                    </a>
+                </li>
+                <li class="menu_li">
+                    <a href="#" class="menu_link">
+                        <span class="icon"><i class='bx bxs-file-doc' ></i></span>
+                        <span class="item">Debits</span>
+                    </a>
+                </li>
+                <hr>
+                <li class="menu_li " >
+                   
+                     
+                        <span class="item " style="color:#cfcfcf"> Assets </span>
+                     
+                    
+                </li>
+
+                    <li class="menu_li">
+                    <a href="#" class="menu_link">
+                        <span class="icon"><i class='bx bxs-brightness' ></i></span>
+                        <span class="item"> Hardwares </span>
+                       
+                    </a>
+                </li>
+                
+                <li class="menu_li disabled">
+                   <div style="padding: 10px;">
+                        <span class="icon"><i class='bx bx-dock-top' ></i></span>
+                        <span class="item"> Licenses </span>
+                        <span class="badge badge-danger bg-info" style="font-size: 9px; color: #232629;margin-left: 5px;">Soon</span>
+                    </div>
+                </li>
+                <li class="menu_li">
+                    <a href="#" class="menu_link">
+                        <span class="icon"><i class='bx bxs-printer' ></i></span>
+                        <span class="item"> Accessories </span>
+                       
+                    </a>
+                </li>
+                <li class="menu_li">
+                    <a href="#" class="menu_link">
+                        <span class="icon"><i class='bx bxs-droplet' ></i></span>
+                        <span class="item"> Consumables </span>
+                       
+                    </a>
+                </li>
+                <hr>
+                <li class="menu_li " >
+                   
+                     
+                        <span class="item " style="color:#cfcfcf">People</span>
+                     
+                    
+                </li>
+                <li class="menu_li">
+                    <a href="#" class="menu_link">
+                        <span class="icon"><i class='bx bxs-hand' ></i></span>
+                        <span class="item"> Users </span>
+                       
+                    </a>
+                </li>
+                <li class="menu_li">
+                    <a href="#" class="menu_link">
+                        <span class="icon"><i class='bx bxs-user-voice' ></i></span>
+                        <span class="item"> Employees </span>
+                       
+                    </a>
+                </li>
+                <li class="menu_li " >
+                   
+                     
+                    <span class="item " style="color:#cfcfcf ">Dependencies</span>
+                 
+                
+            </li>
+            <li class="menu_li">
+                <a href="#" class="menu_link">
+                    <span class="icon"><i class='bx bx-task' ></i></span>
+                    <span class="item"> Projects </span>
+                   
+                </a>
+            </li>
+            <hr>
+            <li class="menu_li " >
+               
+                 
+                    <span class="item " style="color:#cfcfcf">Me</span>
+                 
+                
+            </li>
+            <li class="menu_li">
+                <a href="#" class="menu_link">
+                    <span class="icon"><i class='bx bxs-user' ></i></span>
+                    <span class="item"> My Profile </span>
+                   
+                </a>
+            </li>
+            <li class="menu_li">
+                <a href="#" class="menu_link">
+                    <span class="icon"><i class='bx bx-task-x' ></i></span>
+                    <span class="item"> To Do List </span>
+                   
+                </a>
+            </li>
+            </ul>
+        </div>
+        <div class="menu_footer">
+       
+            <div class="settings">    <a href="#"><i class='bx bxs-cog'></i> </a></div>
+            <div class="notifications" style="position: relative;"><a href="#"><i class='bx bxs-message'  ><span class="badge badge-danger bg-danger" style="font-size: 7px; position: absolute; top: 25%;">4</span></i></a></div>
+            <div class="logout"><a href="#"><i class='bx bx-log-out-circle' ></i></a></div>
+
+
+        </div>
     </div>
-    </body>
-    
+</body>
