--- a/src/app/Components/navmenu/navmenu.component.html
+++ b/src/app/Components/navmenu/navmenu.component.html
@@ -6,28 +6,36 @@
       
         <a href="#" class="navbar-brand"><img src="assets/images/nav-logo.png" width="35px" alt=""></a>
       
-    
-      <div class="input-group input-group-sm  navbar-center">
-        <div class="input-group-prepend" >
-          <span class="input-group-text" id="inputGroup-sizing-sm" style="border-right: none; border-radius: 2px; height: 30px;"><i class='bx bx-search' ></i></span>
+        <div class="navbar-center">
+          
         </div>
-        <input type="text" class="form-control bg-light" aria-label="Small" placeholder="Search..." aria-describedby="inputGroup-sizing-sm" style="text-align: center; position: relative; border-left: none; height: 30px;">
-      </div>
-      
+        
+    
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" >
         <span class="navbar-toggler-icon" style="height: 18px; width: 18px;"></span>
       </button>
       
       <div class="collapse navbar-collapse" id="navbarNav">
+        
         <ul class="navbar-nav ms-md-auto gap-2">
-          <li class="nav-item rounded">
-            <a class="nav-link " aria-current="page" href="#"><i class='bx bxs-home'></i> Home</a>
+          <div class="input-group input-group-sm" style="padding-top: 7px;">
+            <div class="input-group-prepend" >
+              <span class="input-group-text" id="inputGroup-sizing-sm" style="border-right: none; border-radius: 2px; height: 30px;"><i class='bx bx-search' ></i></span>
+            </div>
+            <input type="text" class="form-control bg-light" aria-label="Small" placeholder="Search..." aria-describedby="inputGroup-sizing-sm" style="text-align: center; position: relative; border-left: none; height: 30px;">
+          </div>
+          <li class="nav-item dropdown rounded">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Create New</a>
+            <ul class="dropdown-menu dropdown-menu-end bg-light" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#" style="color: rgb(97, 97, 97);"> Hardware <i class='bx bx-plus' style="float: right; padding-top: 5px;"></i></a></li>
+              <li><a class="dropdown-item" href="#" style="color: rgb(97, 97, 97);"> Debit <i class='bx bx-plus' style="float: right; padding-top: 5px;"></i></a></li>
+              <li><a class="dropdown-item" href="#" style="color: rgb(97, 97, 97);"> Employee <i class='bx bx-plus' style="float: right; padding-top: 5px;"></i></a></li>
+              <li><a class="dropdown-item" href="#" style="color: rgb(97, 97, 97);"> User <i class='bx bx-plus' style="float: right; padding-top: 5px;"></i></a></li>
+              <li><a class="dropdown-item" href="#" style="color: rgb(97, 97, 97);"> Project <i class='bx bx-plus' style="float: right; padding-top: 5px;"></i></a></li>
+            </ul>
           </li>
-          <li class="nav-item rounded">
-            <a class="nav-link" href="#"><i class='bx bxs-user-voice' ></i> About</a>
-          </li>
-          <li class="nav-item rounded">
-            <a class="nav-link" href="#"><i class='bx bxs-phone-call' ></i> Contact</a>
+          <li class="nav-item rounded" style="position: relative;">
+            <a class="nav-link" href="#"><i class="fas fa-flag"></i><span class="badge badge-danger bg-danger" style="font-size: 8px; position: absolute; top: 4px; right: 1px;">4</span></a>
           </li>
           <li class="nav-item dropdown rounded">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class='bx bxs-user' ></i> {{currentUserName}}</a>
@@ -40,8 +48,12 @@
               <li><a class="dropdown-item" href="#" style="color: rgb(97, 97, 97);"><i class='bx bx-log-out' ></i> Logout </a></li>
             </ul>
           </li>
+          <li class="nav-item rounded">
+            <a class="nav-link" href="#"><i class="fas fa-cogs"></i></a>
+          </li>
         </ul>
       </div>
     </div>
 
   </nav>
+  
