--- a/src/app/Components/sidemenu/sidemenu.component.css
+++ b/src/app/Components/sidemenu/sidemenu.component.css
@@ -2,8 +2,20 @@
     font-family: Montserrat, sans-serif;
     color: #f6f6f6;
     font-size: 14px;
-  
+    list-style: none;
+    transition: .4s ease;
 }
+body::-webkit-scrollbar{
+    width: 12px;
+}
+body::-webkit-scrollbar-track {
+    background: #353b41;        /* color of the tracking area */
+  }
+  body::-webkit-scrollbar-thumb {
+    background-color:  #3d4349;  /* color of the scroll thumb */
+    border-radius: 0px;       /* roundness of the scroll thumb */
+    
+  }
 body{
    
    background-color: #232629;
@@ -11,6 +23,79 @@ body{
     position: fixed;
     top: 52px;
     left: 0px;
-    min-height: 100%;
- 
+    bottom: 40px;
+    min-height: 90%;
+    padding-top: 25px;
+    padding-bottom: 20px;
+    overflow-y: scroll;
+}
+
+.sidebar  .profile{
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.sidebar .profile img{
+    display: block;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+.sidebar .profile h3{
+    color: #ffffff;
+    margin: 30px 0 5px;
+}
+
+.sidebar .profile p{
+    color: rgb(216, 216, 216);
+    font-size: 14px;
+}
+
+
+.menu_items{
+    padding: 0px;
+    width: 100%;
+}
+.menu_items .menu_li{
+    padding: 10px;
+    width: 100%;
+}
+.menu_items .menu_li a{
+    text-decoration: none;
+    line-height: 10px;
+    
+    padding: 10px;
+}
+
+a:hover{
+    background-color: #3d4349;
+}
+
+.menu_items .menu_li  i{
+    width: 25px;
+}
+.menu_footer{
+    position: fixed;
+    bottom: 0px;
+    z-index: 150;
+    background-color: #353b41;
+    height: 40px;
+    width: 17%;
+    text-align: center;
+    float: left;
+    display: flex;
+}
+.menu_footer a{
+    padding: 15px;
+}
+.menu_footer div{
+    width: 33%;
+    padding: 13px;
+  
+}
+
+.menu_items{
+    margin-top: 20%;
 }
