--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,15 +6,14 @@
     <div class="col-sm-2 " style="height: 100%;">
   <app-sidemenu></app-sidemenu>
     </div>
-    <div class="col-sm-10">
-      
-   
+    <div class="col-sm-10" style="background-color: #f6f6f6;">
+      <app-breadcrumb-date></app-breadcrumb-date>
+      <app-dashboard></app-dashboard>
     </div>
   </div>
   
 </div>
-</div>
+</div> 
 
-<!-- 
-<app-navmenu></app-navmenu>
+<!-- <app-navmenu></app-navmenu>
 <app-error-page></app-error-page> -->
