--- a/src/app/Components/sidemenu/sidemenu.component.html
+++ b/src/app/Components/sidemenu/sidemenu.component.html
@@ -10,19 +10,19 @@
                 <li class="menu_li " >
                    
                      
-                    <span class="item " style="color:#cfcfcf"> General </span>
+                    <span class="gen" style="color:#cfcfcf"> General </span>
                  
                 
             </li>
             
                 <li class="menu_li">
-                    <a href="#" >
+                    <a href="dashboard" >
                         <span class="icon"><i class='bx bxs-grid-alt' ></i></span>
                         <span class="item">Dashoard</span>
                     </a>
                 </li>
                 <li class="menu_li">
-                    <a href="#" class="menu_link">
+                    <a href="debits" class="menu_link">
                         <span class="icon"><i class='bx bxs-file-doc' ></i></span>
                         <span class="item">Debits</span>
                     </a>
@@ -31,7 +31,7 @@
                 <li class="menu_li " >
                    
                      
-                        <span class="item " style="color:#cfcfcf"> Assets </span>
+                        <span class="gen" style="color:#cfcfcf"> Assets </span>
                      
                     
                 </li>
@@ -45,10 +45,10 @@
                 </li>
                 
                 <li class="menu_li disabled">
-                   <div style="padding: 10px;">
+                   <div class="dsbldiv" style="padding: 10px;">
                         <span class="icon"><i class='bx bx-dock-top' ></i></span>
                         <span class="item"> Licenses </span>
-                        <span class="badge badge-danger bg-info" style="font-size: 9px; color: #232629;margin-left: 5px;">Soon</span>
+                        <span class="badge badge-danger bg-info bdg" >Soon</span>
                     </div>
                 </li>
                 <li class="menu_li">
@@ -69,7 +69,7 @@
                 <li class="menu_li " >
                    
                      
-                        <span class="item " style="color:#cfcfcf">People</span>
+                        <span class="gen" style="color:#cfcfcf">People</span>
                      
                     
                 </li>
@@ -90,7 +90,7 @@
                 <li class="menu_li " >
                    
                      
-                    <span class="item " style="color:#cfcfcf ">Dependencies</span>
+                    <span class="gen" style="color:#cfcfcf ">Depends</span>
                  
                 
             </li>
@@ -105,7 +105,7 @@
             <li class="menu_li " >
                
                  
-                    <span class="item " style="color:#cfcfcf">Me</span>
+                    <span class="gen " style="color:#cfcfcf">Me</span>
                  
                 
             </li>
@@ -126,8 +126,8 @@
             </ul>
         </div>
         <div class="menu_footer">
-       
-            <div class="settings">    <a href="#"><i class='bx bxs-cog'></i> </a></div>
+      
+            <div class="settings">    <a href="#" ><i class='bx bxs-cog'></i> </a></div>
             <div class="notifications" style="position: relative;"><a href="#"><i class='bx bxs-message'  ><span class="badge badge-danger bg-danger" style="font-size: 7px; position: absolute; top: 25%;">4</span></i></a></div>
             <div class="logout"><a href="#"><i class='bx bx-log-out-circle' ></i></a></div>
 
