--- a/src/app/Components/breadcrumb-date/breadcrumb-date.component.html
+++ b/src/app/Components/breadcrumb-date/breadcrumb-date.component.html
@@ -2,8 +2,8 @@
  
     <nav aria-label="breadcrumb" style="float: right;">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
           <li class="breadcrumb-item"><a href="#">Debits</a></li>
+          <!-- <li class="breadcrumb-item"><a href="#">New</a></li> -->
           <li class="breadcrumb-item active" aria-current="page">New</li>
         </ol>
       </nav>
