--- a/src/app/Components/sidemenu/sidemenu.component.html
+++ b/src/app/Components/sidemenu/sidemenu.component.html
@@ -37,7 +37,7 @@
                 </li>
 
                     <li class="menu_li">
-                    <a href="#" class="menu_link">
+                    <a href="hardwares" class="menu_link">
                         <span class="icon"><i class='bx bxs-brightness' ></i></span>
                         <span class="item"> Hardwares </span>
                        
