--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
- <!-- <app-navmenu></app-navmenu>
+ <app-navmenu></app-navmenu>
 <div class="index" style="position: relative;">
 
 <div class="content container-fluid">
@@ -8,12 +8,12 @@
     </div>
     <div class="col-sm-10" style="background-color: #f6f6f6;">
       <app-breadcrumb-date></app-breadcrumb-date>
-      <router-outlet></router-outlet>
+      <app-todo></app-todo>
     </div>
   </div>
   
 </div>
-</div> -->
-<router-outlet></router-outlet>
+</div> 
+<!-- <router-outlet></router-outlet> -->
  <!-- <app-navmenu></app-navmenu>
 <app-error-page></app-error-page> -->
