--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="col-sm-10" style="background-color: #f6f6f6;">
       <app-breadcrumb-date></app-breadcrumb-date>
-      <app-todo></app-todo>
+      <router-outlet></router-outlet>
     </div>
   </div>
   
