--- a/src/app/Components/sidemenu/sidemenu.component.html
+++ b/src/app/Components/sidemenu/sidemenu.component.html
@@ -117,7 +117,7 @@
                 </a>
             </li>
             <li class="menu_li">
-                <a href="#" class="menu_link">
+                <a href="todos" class="menu_link">
                     <span class="icon"><i class='bx bx-task-x' ></i></span>
                     <span class="item"> To Do List </span>
                    
