--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -1,3 +1,53 @@
+<div class="container w-100">
+    <div class="row ">
+        <div class="col-sm ">
+            <a href="hardwares">
+                <div class="cl1 shadow-sm">
+                    <div class="mark m1" ></div>
+                    <div class="col_count">657</div>
+                    <div class="col_text"><b>HARDWARES</b></div>
+                    <div class="col_logo hw"><i class='bx bx-server'></i></div>
+                </div>
+            </a>
+            
+           
+        </div>
+        <div class="col-sm">
+            <a href="#">
+                <div class="cl2 shadow-sm">
+                    <div class="mark m2"></div>
+                    <div class="col_count">152</div>
+                    <div class="col_text"><b>EMPLOYEES</b></div>
+                    <div class="col_logo emp"><i class='bx bx-group'></i></div>
+                </div>
+            </a>
+            
+        </div>
+        <div class="col-sm ">
+            <a href="debits">
+                <div class="cl3 shadow-sm">
+                    <div class="mark m3"></div>
+                    <div class="col_count">264</div>
+                    <div class="col_text"><b>DEBİTS</b></div>
+                    <div class="col_logo db"><i class='bx bx-food-menu' ></i></div>
+                </div>
+            </a>
+           
+        </div>
+        <div class="col-sm ">
+            <a href="#">
+                <div class="cl4 shadow-sm">
+                    <div class="mark m4"></div>
+                    <div class="col_count">LICENCES</div>
+                    <div class="col_text"><b>not avaliable</b></div>
+                    <div class="col_logo lc"><i class='bx bx-pencil' ></i></div>
+                </div>
+            </a>
+            
+        </div>
+    </div>
+</div>
+
 <div class="pie container shadow-sm rounded">
   
 </div>
