--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -1,10 +1,14 @@
+<app-breadcrumb-date></app-breadcrumb-date>
+
 <div class="container w-100">
     <div class="row ">
         <div class="col-sm ">
             <a href="hardwares">
                 <div class="cl1 shadow-sm">
+                   
                     <div class="mark m1" ></div>
                     <div class="col_count">657</div>
+                    <div class="col_more cm1"><a href="hardwares">click for more...</a></div>
                     <div class="col_text"><b>HARDWARES</b></div>
                     <div class="col_logo hw"><i class='bx bx-server'></i></div>
                 </div>
@@ -17,6 +21,7 @@
                 <div class="cl2 shadow-sm">
                     <div class="mark m2"></div>
                     <div class="col_count">152</div>
+                    <div class="col_more cm2"><a href="employees">click for more...</a></div>
                     <div class="col_text"><b>EMPLOYEES</b></div>
                     <div class="col_logo emp"><i class='bx bx-group'></i></div>
                 </div>
@@ -28,6 +33,7 @@
                 <div class="cl3 shadow-sm">
                     <div class="mark m3"></div>
                     <div class="col_count">264</div>
+                    <div class="col_more cm3"><a href="debits">click for more...</a></div>
                     <div class="col_text"><b>DEBİTS</b></div>
                     <div class="col_logo db"><i class='bx bx-food-menu' ></i></div>
                 </div>
@@ -38,9 +44,10 @@
             <a href="#">
                 <div class="cl4 shadow-sm">
                     <div class="mark m4"></div>
-                    <div class="col_count">LICENCES</div>
-                    <div class="col_text"><b>not avaliable</b></div>
-                    <div class="col_logo lc"><i class='bx bx-pencil' ></i></div>
+                    <div class="col_count">647</div>
+                    <div class="col_more cm4"><a href="consumables">click for more...</a></div>
+                    <div class="col_text"><b>CONSUMABLES</b></div>
+                    <div class="col_logo lc"><i class='bx bx-droplet'></i></div>
                 </div>
             </a>
             
