--- a/src/app/Components/dashboard/dashboard.component.css
+++ b/src/app/Components/dashboard/dashboard.component.css
@@ -2,21 +2,23 @@
 *{
     font-family: Montserrat, sans-serif;
     color: #f6f6f6;
-  
+ 
+ 
 }
 
 .pie{
-    background-color: #f6f6f6;
+    background-color: #fafafa;
     width: 100%;
     height: 500px;
     margin-top: 15px;
 }
 .row{
     height: 50%;
- 
+    
 }
 
 .cl1{
+    
     min-width: 300px;
     overflow: hidden;
     background-color: #f88568;
@@ -51,24 +53,26 @@
 .col_text{
     font-family: "Dosis", sans-serif;
     position: absolute;
-    bottom: 5px;
+    top: 10px;
     left: 30px;
+    font-size: 12px;
 }
 
 .col_logo i{
     
     position: absolute;
+    bottom: 10px;
     right: 5px;
-    font-size: 140px;
+    font-size: 100px;
     
 }
 
 .col_count{
     position: absolute;
-    top: 25px;
+    top: 45px;
     left: 37px;
     font-family: "Dosis", sans-serif;
-    font-size: 60px;
+    font-size: 40px;
     font-weight: 800;
     z-index: 99;
 }
@@ -114,5 +118,45 @@ a{
 }
 
 .m4{
-    background-color: #54dbcb
+    background-color: #54dbcb;
+}
+
+a:hover i{
+    font-size: 110px;
+}
+a:hover .col_more a{
+    color: #ffffff;
+}
+*{
+    transition: 100ms ease;
+}
+
+.col_more{
+    position: absolute;
+    top: 61%;
+    left: 35px;
+}
+.col_more a{
+    text-decoration: none;
+   
+    font-size: 12px;
+}
+
+.col_more a:hover{
+    color: #ffffff;
+}
+
+.cm1 a{
+    color: #cc6046;
+}
+
+.cm2 a{
+    color: #6a97a8;
+}
+.cm3 a{
+    color: #d3b058;
+}
+
+.cm4 a{
+    color: #72e9db;
 }
