--- a/src/app/Components/breadcrumb-date/breadcrumb-date.component.html
+++ b/src/app/Components/breadcrumb-date/breadcrumb-date.component.html
@@ -1,10 +1,10 @@
 <div class="content" >
  
-    <nav aria-label="breadcrumb" style="float: right;">
-        <ol class="breadcrumb">
-          <li *ngFor="let cumb of cumbs" [class]="passiveClass"><a href="#">{{cumb}}</a></li>
-          
-       
-        </ol>
-      </nav>
+  <nav aria-label="breadcrumb" style="float: right; font-size: medium;">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="#"><i class='bx bx-home-alt'></i></a></li>
+      <li class="breadcrumb-item active" aria-current="page">Dashboard</li>
+    </ol>
+  </nav>
+  
 </div>
