--- a/src/app/Components/dashboard/dashboard.component.css
+++ b/src/app/Components/dashboard/dashboard.component.css
@@ -6,20 +6,48 @@
  
 }
 
+
+.slct ul li a{
+    color: rgb(22, 22, 22);
+}
+
+.slct ul li{
+    padding: 5px;
+}
+.slct ul li a{
+    padding: 5px;
+}
 .pie{
-    background-color: #fafafa;
+    background-color: #f6f6f6;
     width: 100%;
     height: 500px;
     margin-top: 15px;
+    position: relative;
+}
+
+#filterBy{
+   
+    color: #333;
+    font-size: 13px;
+}
+
+.content_header{
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    
+    padding: 10px;
+    border-bottom-left-radius: 6px;
+    border-top-right-radius: 2px;
 }
 .row{
     height: 50%;
-    
+    margin-bottom: 10px;
 }
 
 .cl1{
-    
-    min-width: 300px;
+    margin-bottom: 15px;
+    min-width: 350px;
     overflow: hidden;
     background-color: #f88568;
     height: 150px;
@@ -27,7 +55,8 @@
 }
 
 .cl2{
-    min-width: 300px;
+    margin-bottom: 15px;
+    min-width: 350px;
     overflow: hidden;
     background-color:#365c6b;
     height: 150px;
@@ -35,7 +64,8 @@
 }
 
 .cl3{
-    min-width: 300px;
+    margin-bottom: 15px;
+    min-width: 350px;
     background-color: #fcd166;
     height: 150px;
     position: relative;
@@ -43,7 +73,8 @@
 }
 
 .cl4{
-    min-width: 300px;
+    margin-bottom: 15px;
+    min-width: 350px;
     overflow: hidden;
     background-color: #33c5b4;
     height: 150px;
@@ -97,6 +128,7 @@ a{
     padding: 0px;
     margin: 0px;
     width: 100%;
+  
 }
 .mark{
     position: absolute;
@@ -148,6 +180,7 @@ a:hover .col_more a{
 
 .cm1 a{
     color: #cc6046;
+  
 }
 
 .cm2 a{
@@ -160,3 +193,44 @@ a:hover .col_more a{
 .cm4 a{
     color: #72e9db;
 }
+
+/*! SVG Türkiye Haritası | CSS | MIT Lisans | dnomak.com */
+
+.svg-turkiye-haritasi {
+  padding-top: 80px;
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+  }
+  .svg-turkiye-haritasi svg {
+    width: 100%;
+    height: auto;
+  }
+  .il-isimleri {
+    position: absolute;
+    z-index: 2;
+  }
+  .il-isimleri div {
+    font-family: 'Open Sans';
+    display: inline-block;
+    background: #1094F6;
+    color: #fff;
+    padding: 8px 16px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+  }
+  #svg-turkiye-haritasi path {
+   
+    fill: rgb(49, 49, 49);
+  }
+  #svg-turkiye-haritasi path:hover {
+    fill: #eb4a5f;
+  }
+  #guney-kibris {
+    pointer-events: none;
+    display: none;
+  }
+  #kuzey-kibris{
+      display: none;
+  }
